# navidificador

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile-base  Dockerfile-final  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  post-install.sh  pyproject.toml  sonar-project.properties
docs/: contributors.md
examples/: poem1.json
src/medp/: __init__.py
src/medp/logging/: __init__.py  kubernetes_logging_config.ini  logging_config.ini
src/navidificador/: __init__.py  fastapi.py  profiler.py
src/navidificador/logging/: __init__.py  kubernetes_logging_config.ini  logging_config.ini
src/resources/: poem1.json
src/templates/: index-en.html  nl-es.html  test.html
templates/: nl-en.html
tests/: logging_test.py  server_test.py  test_docker_image_test.py
